<resources>
    <string name="app_name">Gitto</string>
    <string name="search_user_by_name_text">Search user by name</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Password</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_text">Sign up</string>
    <string name="sign_up_with_github_text">Sign up with GitHub</string>
    <string name="confirm_password_hint_text">Confirm Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="register_button_text">Register</string>
    <string name="chooser_info_text">Bring together your projects, followers and work group</string>
    <string name="chooser_title_text">GitHub repositories and commits tracker.</string>
    <string name="lets_sign_you_in_text">Lets sign you in.</string>
    <string name="welcome_back_text">Welcome!</string>
    <string name="do_not_have_an_account_yet_text">Do not have an account yet?</string>
    <string name="register_text">Register</string>
    <string name="reg_title_text">Exciting time!</string>
    <string name="reg_message_text">Lets get you registered.</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="reg_success_text">A verification email has been sent to the email address used for registration.</string>
    <string name="continue_button_text">Continue</string>
    <string name="reg_success_title_text">Success!</string>
    <string name="logout_button_text">Logout</string>
    <string name="user_name_text">User:  %s</string>
    <string name="repository_count_text">Repository count: %s</string>
    <string name="commits_count_text">Commits count: %s</string>
    <string name="last_updated_text">Last updated: %s</string>
    <string name="repositories_title_text">Repositories</string>
    <string name="commits_title_text">Commits</string>
    <string name="authenticated_text">Authenticated</string>
</resources>